--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create New User</h1>
+<h1>Edit User Info</h1>
 <%= form_for @user, html: { class: "col-xs-4" } do |f| %>
       <div class="form-group">
          <%= f.label :username, "User Name" %>
