--- a/app/views/maps/_incidents.html.erb
+++ b/app/views/maps/_incidents.html.erb
@@ -10,6 +10,7 @@
 		<% @incidents.each do |incident| %>
   		<h3>Incident #<%= incident.id %> <%= incident.location.titleize %></h3>
   		<h5>by: <%= incident.user.username %></h5>
+      <h6><%= incident.updated_at.strftime("%B %d, %Y") %></h6>
   		<p><%= incident.description %></p>
   		
   		<% if current_user && incident.user_id == current_user.id %>
@@ -17,6 +18,7 @@
   			<%= link_to "Edit", edit_incident_path(incident.id) %>
 
   		<% end %>
+      <hr>
   	<% end %>
 
 	</div>	
